# PauloDerAlchemist

./: LICENSE  README.md
PauloDerAlchemist_Original/Paulo_der_Alchemist/: .gitlab-ci.yml  CMakeLists.txt  main.cpp
PauloDerAlchemist_Original/Paulo_der_Alchemist/include/: blackbox.h  machine.h  variables.h
PauloDerAlchemist_Original/Paulo_der_Alchemist/src/: blackbox.cpp  machine.cpp
PauloDerAlchemist_Unity/Assets/Art/: Ground.mat  New Material.mat  Pipe.mat
PauloDerAlchemist_Unity/Assets/Art/Materials/: Curser.mat  Ground.mat  Machine.mat  Pipe.mat  Plane.mat
PauloDerAlchemist_Unity/Assets/Code/: CameraMovement.cs  InputHandler.cs  Machine.cs  Pipe.cs  PipeInputHandler.cs  Piping.cs  Point.cs  Port.cs  Setup.cs  Storage.cs
PauloDerAlchemist_Unity/Assets/Code/Test1/: OldPipe.cs  Piping.cs  Point.cs
PauloDerAlchemist_Unity/Assets/Code/Test2/: CurserRefHolder.cs  IInteraction.cs  InteractionHandler.cs  Move.cs  Node.cs  Pipe.cs  Placing.cs  Plane.cs  Region.cs
PauloDerAlchemist_Unity/Assets/Code/Tools/: DDOL.cs  Multiton.cs  Singleton.cs
PauloDerAlchemist_Unity/Assets/Prefab/: Machine.prefab  Pipe.prefab  Port.prefab  Storage.prefab
PauloDerAlchemist_Unity/Assets/Scenes/: SampleScene.unity
PauloDerAlchemist_Unity/Assets/TextMesh Pro/Resources/Fonts & Materials/: LiberationSans SDF.asset
PauloDerAlchemist_Unity/ProjectSettings/: ProjectSettings.asset  TagManager.asset
PauloDerAlchemist_Unity/UserSettings/Layouts/: default-2021.dwlt
